--- a/django_project/.env
+++ b/django_project/.env
@@ -1,5 +1,5 @@
 EMAIL_USE_TLS = True
 EMAIL_HOST = 'smtp.gmail.com'
 EMAIL_PORT = 587
-EMAIL_HOST_USER = 'EMAIL'
-EMAIL_HOST_PASSWORD = 'EMAIL-PASSWORD'
+EMAIL_HOST_USER = 'daudishuuti@gmail.com'
+EMAIL_HOST_PASSWORD = 'jinkoos@1440'
