--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ DB_USER='daud'
 DB_PASSWORD='jinkoos'
 DB_HOST='127.0.0.1'
 MODE='dev' 
-ALLOWED_HOSTS='.localhost', '.herokuapp.com', '.127.0.0.1'
+ALLOWED_HOSTS=['*']
 DISABLE_COLLECTSTATIC=1
